# shorter-url

./: docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: cb86666257b3_url_table.py
app/: main.py
app/core/: config.py
app/db/: unit_of_work.py
app/models/: url.py
app/repositories/: base_repo.py  url_repo.py
app/routers/v1/: urls.py
app/schemas/: urls.py
app/services/: url_service.py
