[project]
name = "url-shorter"
version = "0.1.0"
description = "url-shorter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.121.2",
    "passlib==1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
exclude = [".venv", "alembic"]
include = ["*.py"]
line-length = 120
indent-width = 4
target-version = "py314"
src = ["app"]


[tool.ruff.lint]

select = [
    "E",
    "W",
    "F",
    "I", 
    "B", 
    "C4", 
    "SIM",
    "UP", 
    "ASYNC", 
    "RUF", 
]

ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]